...
import androidx.compose.ui.platform.LocalContext
import androidx.compose.runtime.livedata.observeAsState
import androidx.navigation.compose.currentBackStackEntryAsState

enum class ScreenNavigation(val route: String) {
    Home("home1"),
    Manage("manage2"),
    Configure("configure3"),
    Connect("connectPage4"),
    ScrollableEndP("editWithCallback5"),
    ScrollablePort("editPort6"),
    ScrollableNameDevices("editNameDevice7"),
    ScrollableNamePlugins("editPlugins8"),
    ChangeEndpoint("changeEndpoint9"),

...
                    val deviceEndpoint: String = ""
                )

                var connectionState by remember { mutableStateOf(DeviceConnectionState()) }

                DeviceManage(
                    name = "Device Name",
                    valueOf = connectionState.name,
                    hideButton = true,
                    onValueChange = { connectionState = connectionState.copy(name = it)}
                )

                DeviceManage(
                    name = "Device Port",
                    valueOf = connectionState.port,
                    hideButton = true,
                    onValueChange = { connectionState = connectionState.copy(port = it) }
                )

                DeviceManage(
                    name = "Device Endpoint",
                    valueOf = connectionState.deviceEndpoint,
                    hideButton = true,
                    onValueChange = { connectionState = connectionState.copy(deviceEndpoint = it) }
                )

                connectButtonWriter(
...
                name = "Android back button",
                endController = 3,
                onBack = { navController.popBackStack() }
            )
                val currentDevice = configReader.parseConfigByTargetId("deviceEndpoint",deviceId)

                DeviceManage(name="Endpoint Device", modifier = Modifier, customText = "Set", writeId = deviceId, keyQuery = "deviceEndpoint")
                Text(text="Current name: ${currentDevice.toString()}")
                val getAllNames = configReader.parseConfig("deviceEndpoint")
                val allNames: Map<Int, String> = getAllNames.withIndex().associate { it.index to it.value }

            scrollableImutPage(name = "a", modifier = Modifier, activeFields = allNames)
            }
...
        }
        composable(route = "scrollableNamePlugins/{idKey}") { backStackEntry ->
            val deviceId = backStackEntry.arguments?.getString("idKey") ?: ""

            Column(modifier = Modifier.fillMaxSize()) {
                headerWindow(name = "Android", endController = 3,onBack = { navController.popBackStack() })
                searchField(name="Plugins", modifier = Modifier, customText = "Search")
                scrollablePage(name = "a", modifier = Modifier, activeFields = mapOf(1 to "package1.bin", 2 to "package2.bin", 3 to "package3.bin", 4 to "package4.bin"), currentlyActive = listOf(1,2,3))
            }
        }

        composable(
            route = "configure/{deviceId}"
...
            }
        }

        composable(route = "changeEndpoint/{deviceId}") { backStackEntry ->
            Column(modifier = Modifier.fillMaxSize()) {
                headerWindow(name = "Android", endController = 3,onBack = { navController.popBackStack() })
                DeviceManage(name="devices to toggle", modifier = Modifier)
            }
        }
    }
}


...
