...
                IconButton(
                    onClick = { addComponentNav() },
                    modifier = Modifier.size(48.dp)
                ) {
                    Icon(
                        imageVector = Icons.Default.Add,
                        contentDescription = "Create component",
                        tint = Color(0xFFc7cbd4)
                    )
                }
            }
        }
        
...
